testing - issue w/ frow on firefox, resolved

--- a/_sass/components/slider.scss
+++ b/_sass/components/slider.scss
@@ -8,7 +8,8 @@
 		width: 425px;
 	}
 	@include tablet {
-		margin-left: 100px;
+		margin-left: 60px;
+		// margin-left: 100px;
 		width: 630px;
 	}
 	@include laptop {
@@ -19,9 +20,11 @@
 	}
 }
 .headline1 {
-	font-size: 34px;
-	line-height: 1.1;
-	padding-bottom: 35px;
+	font-size: 26px;
+	// font-size: 34px;
+	line-height: 1.2;
+	padding-bottom: 20px;
+	// padding-bottom: 35px;
 	padding-right: 10px;
 
 	@include small {
@@ -47,7 +50,8 @@
 .headline2 {
 	@extend %font-italic;
 	line-height: 1.4;
-	font-size: 20px;
+	font-size: 16px;
+	// font-size: 20px;
 	font-weight: lighter;
 	padding-right: 10px;
 	text-transform: initial;
