--- a/_sass/grid/header.scss
+++ b/_sass/grid/header.scss
@@ -90,45 +90,53 @@
 .overlay ul {
 	display: inline-block;
 	list-style: none;
-	margin-left: 20px;
+	// margin-left: 20px;
 	padding: 0;
 	position: relative;
 
 	@include tablet {
-		margin-left: 50px;
+		// margin-left: 50px;
 	}
 }
 .overlay ul li {
 	margin:0;
 	padding: 0;
 	width: 100%;
-	padding-bottom: 20px;
+	// padding-bottom: 20px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+
+	@include palm {
+		padding-bottom: 20px;
+	}
 }
 .overlay ul li a {
 	color: #fff;
-	font-size: 38px;
-	line-height: 44px;
+	font-size: 34px;
+	// font-size: 38px;
+	// line-height: 44px;
+	line-height: 1.2;
 	font-weight: bold;
 	text-decoration: none;
 
 	@include small {
 		font-size: 48px;
-		line-height: 54px;
+		// line-height: 54px;
 	}
 
 	@include palm {
 		font-size: 60px;
-		line-height: 60px;
+		line-height: 1;
 	}
 
 	@include tablet {
 		font-size: 70px;
-		line-height: 70px;
+		// line-height: 70px;
 	}
 
 	@include desktop {
 		font-size: 90px;
-		line-height: 80px;
+		// line-height: 80px;
 	}
 }
 .overlay ul li a:hover {
